--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argo-workflow-tools"
-version = "0.9.1"
+version = "0.9.3"
 description = "A suite of tools to ease ML pipeline development with Argo Workflows"
 authors = ["Diagnostic Robotics"]
 license = "Apache 2.0"
@@ -15,7 +15,7 @@ pydantic = "^1.7.4"
 contextvars = "^2.4"
 shortuuid = "^1.0.8"
 urllib3 = "^1.26.7"
-certifi = "^2021.10.8"
+certifi = "<=2021.10.8"
 requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
