--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argo-workflow-tools"
-version = "0.9.5"
+version = "0.9.11"
 description = "A suite of tools to ease ML pipeline development with Argo Workflows"
 authors = ["Diagnostic Robotics"]
 license = "Apache 2.0"
@@ -9,12 +9,12 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
-PyYAML = "^6.0"
+python = ">=3.7,<4.0"
+PyYAML = ">=5.0"
 pydantic = "^1.7.4"
 contextvars = "^2.4"
 shortuuid = "^1.0.8"
-urllib3 = "^1.26.7"
+urllib3 = "<2.0.0"
 certifi = "<=2021.10.8"
 requests = "^2.26.0"
 
