--- a/.github/workflows/poetry-publish.yml
+++ b/.github/workflows/poetry-publish.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Build package
       run: poetry build -f wheel
     - name: Publish package
-      run: poetry publish -u $PYPI_USER -p $PYPI_TOKEN
+      run: poetry publish -u ${{ secrets.PYPI_USER }} -p ${{ secrets.PYPI_TOKEN }}
