add support for the visualization of the workflow dependencies graph of nested workflow templates (in a new isolated package)

--- a/argo_workflow_tools_visualization/Makefile
+++ b/argo_workflow_tools_visualization/Makefile
@@ -8,10 +8,15 @@ isort:
 	isort argo_workflow_tools tests examples
 
 test:
-	poetry run pytest --durations=5 tests/argo_workflow_tools/dsl/
+	pytest --durations=5 ../tests/argo_workflow_tools_visualization/
 
 build:
 	poetry build --format wheel
 
-install:
+install-mac:
 	poetry install
+	brew install graphviz
+
+install-ubuntu:
+	poetry install
+	sudo apt-get install graphviz
