--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,13 @@ jobs:
       run: |
         python -m pip install --upgrade poetry
         poetry install
-    - name: Run Test
+    - name: Run tests
       run: make test
+    - name: Install visualization package dependencies
+      run: |
+        cd argo_workflow_tools_visualization/
+        make install-ubuntu
+    - name: Run visualization package tests
+      run: |
+        cd argo_workflow_tools_visualization/
+        poetry run make test
