--- a/.github/workflows/publish-visualization-package.yml
+++ b/.github/workflows/publish-visualization-package.yml
@@ -19,6 +19,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade poetry
         cd argo_workflow_tools_visualization/
         poetry install
     - name: Build package
