--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "argo-workflow-tools"
-version = "0.9.47"
+version = "0.9.48"
 description = "A suite of tools to ease ML pipeline development with Argo Workflows"
 authors = ["Diagnostic Robotics"]
 license = "Apache 2.0"
@@ -17,6 +17,7 @@ shortuuid = "^1.0.8"
 urllib3 = "<2.0.0,=>1.26.5"
 certifi = "<=2021.10.8"
 requests = "^2.26.0"
+argo-workflows = "^6.3.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
