--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ PyYAML = ">=5.4"
 pydantic = "^1.7.4"
 contextvars = "^2.4"
 shortuuid = "^1.0.8"
-urllib3 = "<2.0.0,=>1.26.5"
+urllib3 = "<2.0.0"
 certifi = "<=2021.10.8"
 requests = "^2.26.0"
 
